--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
         content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=0">
     
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>领军者商城</title>
+    <title>1</title>
 
 </head>
 
