--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport" />
 
-    <meta name="viewport"
-        content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=0">
     
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>1</title>
